# ovni

./: .clang-format  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README.txt  chan.c  chan.h  common.h  compat.h  def.h  dump.c  emu.c  emu.h  emu_kernel.c  emu_nanos6.c  emu_nanos6lite.c  emu_nodes.c  emu_nosv.c  emu_nosv_ss.c  emu_openmp.c  emu_ovni.c  emu_tampi.c  emu_task.c  emu_task.h  flake.nix  heap.h  mkdocs.yml  ovni.c  ovni.h  ovni.pc.in  ovni2prv.c  ovni_trace.h  ovnisync.c  parson.h  pcf.c  pcf.h  (+9 more)
src/: CMakeLists.txt  chan.c  chan.h  common.c  common.h  compat.c  compat.h  config.h.in  dump.c  emu.c  emu_kernel.c  emu_nanos6.c  emu_nodes.c  emu_nosv.c  emu_openmp.c  emu_ovni.c  emu_tampi.c  emu_task.c  heap.h  ovni.c  ovnisync.c  parson.c  pcf.c  pcf.h  sort.c  trace.c  uthash.h
src/emu/: CMakeLists.txt  bay.c  bay.h  body.c  body.h  chan.c  chan.h  clkoff.c  clkoff.h  cpu.c  cpu.h  emu.c  emu.h  emu_args.c  emu_args.h  emu_ev.c  emu_ev.h  emu_hook.h  emu_model.c  emu_model.h  emu_player.c  emu_player.h  emu_prv.h  emu_stat.c  emu_stat.h  emu_stream.c  emu_stream.h  emu_system.c  emu_system.h  emu_system_thread.c  emu_trace.c  emu_trace.h  ev_spec.c  ev_spec.h  extend.c  extend.h  kernel.c  loom.c  loom.h  metadata.c  (+68 more)
src/emu/kernel/: event.c  kernel_priv.h  setup.c
src/emu/mpi/: event.c  mpi_priv.h  setup.c
src/emu/nanos6/: breakdown.c  breakdown.h  connect.c  create.c  event.c  finish.c  nanos6_model.h  nanos6_priv.h  probe.c  pvt.c  setup.c
src/emu/nodes/: connect.c  create.c  event.c  finish.c  nodes_priv.h  probe.c  pvt.c  setup.c
src/emu/nosv/: breakdown.c  breakdown.h  connect.c  create.c  event.c  finish.c  hwc.c  hwc.h  nosv_priv.h  probe.c  pvt.c  setup.c
src/emu/openmp/: breakdown.c  breakdown.h  event.c  openmp_priv.h  setup.c
src/emu/ovni/: CMakeLists.txt  connect.c  create.c  event.c  finish.c  mark.c  mark.h  ovni_model.h  ovni_priv.h  probe.c  setup.c  trace.c  trace.h
src/emu/pv/: cfg.c  cfg.h  cfg_file.c  cfg_file.h  pcf.c  pcf.h  prf.c  prf.h  prv.c  prv.h  pvt.c  pvt.h
src/emu/tampi/: event.c  setup.c  tampi_priv.h
src/emu/ust/: connect.c  create.c  event.c  probe.c  ust_model.h
src/include/: CMakeLists.txt  common.h  compat.h  heap.h  uthash.h  utlist.h  version.h
src/rt/: CMakeLists.txt  ovni.c
test/: CMakeLists.txt  common.h  driver.sh  flush-overhead.c  flush.c  instr.h  instr_nanos6.h  instr_nosv.h  macros.cmake  match-error.sh  match-ok.sh  mp-driver.sh  mp-rank.c  mp-simple.c  nanos6-blocking.c  nanos6-nested-tasks-bad.c  nanos6-nested-tasks.c  nanos6-ss-mismatch.c  nanos6-subsystems.c  nanos6-task-types.c  nanos6.h  nosv-nested-tasks-bad.c  nosv-nested-tasks.c  nosv-pause.c  nosv-task-types.c  ovni-driver.sh
test/bench/: CMakeLists.txt
test/bench/openmp/: CMakeLists.txt  b6_heat_itampi_nodes_tasks.sh  b6_heat_ompv.sh  b6_heat_tampi_ompv.sh  heat.sh
test/emu/: CMakeLists.txt  instr.c  instr.h
test/emu/common/: CMakeLists.txt  instr.c  instr.h
test/emu/kernel/: instr_kernel.h
test/emu/mpi/: CMakeLists.txt  func-mismatch.c  func-nested.c  func.c  instr_mpi.h
test/emu/nanos6/: CMakeLists.txt  blocking.c  breakdown-no-black.c  breakdown-write-zero.c  delayed-connect-ss.c  if0-pause-parent.c  instr_nanos6.h  nested-tasks-bad.c  nested-tasks.c  rerun-task-bad.c  sponge-breakdown.c  sponge.c  ss-mismatch.c  subsystems.c  switch-same-type.c  task-types.c
test/emu/nosv/: CMakeLists.txt  attach-old.c  attach.c  bad-double-execute-parallel.c  bad-double-execute.c  bad-nest-from-parallel.c  bad-nest-same-task.c  bad-pause-parallel.c  barrier.c  cannot-breakdown.c  cond.c  events-from-outside-cpu.c  flag-enable-all.driver.sh  hwc.c  instr_nosv.h  join.c  mp-rank.c  multiple-segment.c  mutex.c  nest-to-parallel.c  nested-tasks-bad.c  nested-tasks.c  parallel-tasks.c  pause.c  require-missing.c  same-subsystem.c  switch-same-type.c  task-pause-from-submit.c  task-types.c
test/emu/openmp/: CMakeLists.txt  instr_openmp.h  mix-task-ws.c  nested-task.c  nested-ws.c
test/emu/ovni/: CMakeLists.txt  burst-stats.c  clockgate.c  dummy.c  duplicated-cpu-index.c  empty-sort.c  empty-stream.c  flush-overhead.c  flush-tmpdir.c  flush-tmpdir.driver.sh  flush.c  instr_ovni.h  libovni-attr.c  libovni-mark.c  match-doc-events.sh  match-doc-version.sh  merge-cpus-loom.c  mp-rank.c  mp-simple.c  no-cpus.c  no-require.c  ovniver.driver.sh  partial-cpus.c  require-bad-version.c  require-repeated.c  require.c  sort-cpus-by-loom.c  sort-cpus-by-rank.c  sort-first-and-full-ring.c  sort-flush.c  sort-into-previous-region.c  sort-into-previous-region.driver.sh  sort.c  split-loom-cpus.c  thread-crash.c  thread-free-isready.c  tmpdir-metadata.c  tmpdir-metadata.driver.sh  tracedir-subdir.c  tracedir-subdir.driver.sh  (+2 more)
test/emu/tampi/: CMakeLists.txt  instr_tampi.h  ss-comm.c  ss-mismatch.c  ss-polling.c
test/manual/nanos6/: CMakeLists.txt  instr_nanos6.h  nanos6-blocking.c  nanos6-nested-tasks.c  nanos6-task-types.c
test/manual/nosv/: CMakeLists.txt
test/manual/ovni/: CMakeLists.txt  instr_ovni.h  mp-rank.c
test/rt/: CMakeLists.txt
test/rt/nanos6/: CMakeLists.txt  external-thread.c  if0.c  nanos6.toml  nested-task.c  sched-add.c  several-tasks.c  simple-task.c  spawn-task-external-bad.c  spawn-task-external.c  spawn-task.c  taskfor.c  taskloop.c
test/rt/nodes/: CMakeLists.txt  fibonacci-mark.c  fibonacci.c  fibonacci.driver.sh  heat-mark.c  nanos6.toml  nosv.toml  taskiter.c
test/rt/nosv/: CMakeLists.txt  attach-instr.c  attach.c  barrier.c  cond.c  hwc-join.driver.sh  hwc-stride.c  hwc-stride.driver.sh  hwc.driver.sh  init-nested.c  inline.c  join.c  kernel-normal.driver.sh  kernel-overflow.driver.sh  kernel.c  mutex.c  nosv-pthread.c  nosv.toml  overflow-kernel-ring.c  overflow-kernel-ring.driver.sh  waitfor.c  (+6 more)
test/unit/: CMakeLists.txt  bay-hash-speed.c  bay.c  body.c  cfg.c  chan.c  clkoff.c  cpu.c  emu.c  emu_stream.c  emu_trace.c  ev_spec.c  loom.c  mux.c  path.c  proc.c  prv.c  sort.c  sort_replace.c  stream.c  task.c  thread.c  trace.c  unittest.h  value.c  version.c
(+194 files in other folders)
