# Copyright (c) 2021-2023 Barcelona Supercomputing Center (BSC)
# SPDX-License-Identifier: GPL-3.0-or-later

#add_library(ovni_model STATIC
#  connect.c
#  create.c
#  event.c
#  probe.c
#  trace.c
#)
#
#target_include_directories(ovni_model
#	PRIVATE "${CMAKE_SOURCE_DIR}/src/emu")
#
#target_link_libraries(emu ovni_model)
